The article notebook added to docs.

--- a/docs/notebooks/three_simple_use_cases.ipynb
+++ b/docs/notebooks/three_simple_use_cases.ipynb
@@ -661,7 +661,7 @@
    "id": "c3a88649",
    "metadata": {},
    "source": [
-    "# Use case 3: computationally expensive problem\n",
+    "## Use case 3: computationally expensive problem\n",
     "\n",
     "In the case of computationally expensive problems, we may encounter unacceptably long waiting times when solving the problems interactively. This is obviously not desired. In such cases, one solution is to compute a representation of the Pareto optimal front _a priori_ and then use the front in an interactive method to explore the available solutions. In this way, we can avoid long waiting times during the interactive solution process.\n",
     "\n",
@@ -828,20 +828,12 @@
    "id": "825cb1fb",
    "metadata": {},
    "source": [
-    "# Summary\n",
+    "## Summary\n",
     "\n",
     "We have seen in the considered use cases how an analytically defined problem can be solved using an MCDM method (NIMBUS); how a data-based problem can be modeled using surrogates and solved utilizing an evolutionary method (interactive RVEA); and we have seen how we can combine both evolutionary (NSGAIII) and MCDM (E-NAUTILUS) methods to solve a computationally expensive problem. In addition, we have seen the basic procedure on how to use interactive methods found in DESDEO (the request-response structure). While these examples were quite simple, they were still and excellent showcase of the basics in applying DESDEO to solve multiobjective optimization problems.\n",
     "\n",
     "Lastly, it is good to observe that interacting with the methods as we have in this example, was cumbersome. We highly suggest that instead some sort of user interface is provided to interface to these method. This can facilitate greatly the interaction between humans and interactive methods found in DESDEO. We are currently developing some necessary building blocks to build such an interface, but we are not ready to discuss it here yet. But stay tuned!"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "9116058c",
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
