--- a/docs/notebooks/KneeOA-DESDEO-Final.ipynb
+++ b/docs/notebooks/KneeOA-DESDEO-Final.ipynb
@@ -43,8 +43,7 @@
     "from desdeo_problem.problem import MOProblem, Variable, ScalarConstraint\n",
     "from desdeo_problem.testproblems.TestProblems import test_problem_builder\n",
     "from desdeo_problem.problem import VectorObjective\n",
-    "from desdeo_mcdm.utilities import payoff_table_method\n",
-    "from desdeo_problem.problem.Variable import IntegerVariable # it is not merge to the master branch (I added it separately)"
+    "from desdeo_mcdm.utilities import payoff_table_method"
    ]
   },
   {
@@ -665,7 +664,7 @@
     "# Define decision variables\n",
     "# As the variable are binary support for IntegerVariable must be included in DESDEO \n",
     "var_names = [f\"therapy_{i+1}\" for i in range(n_variables)]\n",
-    "vars = [IntegerVariable(var_names[i], initial_value=0, lower_bound=0, upper_bound=1) for i in range(n_variables)]"
+    "vars = [Variable(var_names[i], initial_value=0, lower_bound=0, upper_bound=1) for i in range(n_variables)]"
    ]
   },
   {
