Added preliminary version of option generation

--- a/testailu.ipynb
+++ b/testailu.ipynb
@@ -62,7 +62,7 @@
       "\n",
       "Found heuristic solution: objective 2.7449022\n",
       "Presolve removed 8 rows and 139 columns\n",
-      "Presolve time: 0.00s\n",
+      "Presolve time: 0.02s\n",
       "Presolved: 8 rows, 31 columns, 110 nonzeros\n",
       "Found heuristic solution: objective 0.9999961\n",
       "Variable types: 1 continuous, 30 integer (30 binary)\n",
@@ -76,7 +76,7 @@
       "H    0     0                       0.4920936    0.49152  0.12%     -    0s\n",
       "     0     0    0.49152    0    2    0.49209    0.49152  0.12%     -    0s\n",
       "\n",
-      "Explored 1 nodes (17 simplex iterations) in 0.05 seconds (0.00 work units)\n",
+      "Explored 1 nodes (17 simplex iterations) in 0.07 seconds (0.00 work units)\n",
       "Thread count was 12 (of 12 available processors)\n",
       "\n",
       "Solution count 3: 0.492094 0.999996 2.7449 \n",
@@ -145,7 +145,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -191,7 +191,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -214,7 +214,7 @@
     "    5: \"First thinning\",\n",
     "}\n",
     "\n",
-    "def treatment_description(part: str)->str:\n",
+    "def treatment_index(part: str)->str:\n",
     "    if \"clearcut\" in part:\n",
     "        return 1\n",
     "    if \"below\" in part:\n",
@@ -238,14 +238,14 @@
     "            print(treatments)\n",
     "            for part in treatments.split():\n",
     "                if year in part:\n",
-    "                    treatments_dict[key][year]=treatment_description(part)\n",
+    "                    treatments_dict[key][year]=treatment_index(part)\n",
     "\n",
     "\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -266,7 +266,7 @@
        " 'X_13': {'2025': 0, '2030': 0, '2035': 0}}"
       ]
      },
-     "execution_count": 20,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -277,7 +277,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -452,47 +452,30 @@
     "selectedYear = \"2035\"\n",
     "\n",
     "for key in start_result.optimal_variables:\n",
+    "    if key.startswith(\"_\"):\n",
+    "        continue\n",
     "    stand = schedule_dict[key][\"unit\"]\n",
+    "    treatment_id = treatments_dict[key][selectedYear]\n",
     "    option[\"visualMap\"][\"pieces\"].append(\n",
     "        {\n",
-    "            \"value\": treatmentIDs[\n",
-    "                treatmentOptions[\n",
-    "                    str(solutions[dm][\"treatment\"][decision_index][stand])\n",
-    "                ][selectedYear]\n",
-    "            ],\n",
+    "            \"value\": treatment_id,\n",
     "            \"symbol\": \"circle\",\n",
-    "            \"label\": treatmentOptions[\n",
-    "                str(solutions[dm][\"treatment\"][decision_index][stand])\n",
-    "            ][selectedYear]\n",
-    "            .split(\"_\")[0]\n",
-    "            .capitalize(),\n",
-    "            \"color\": treatmentColors[\n",
-    "                treatmentOptions[\n",
-    "                    str(solutions[dm][\"treatment\"][decision_index][stand])\n",
-    "                ][selectedYear]\n",
-    "            ],\n",
+    "            \"label\": description_dict[treatment_id],\n",
+    "            \"color\": treatmentColors[treatment_id],\n",
     "        }\n",
     "    )\n",
     "    option[\"series\"][0][\"data\"].append(\n",
     "        {\n",
-    "            \"name\": str(stand)\n",
+    "            \"name\": \"Stand \" + str(stand)\n",
     "            + \" \"\n",
-    "            + treatmentOptions[\n",
-    "                str(solutions[dm][\"treatment\"][decision_index][stand])\n",
-    "            ][selectedYear],\n",
-    "            \"value\": treatmentIDs[\n",
-    "                treatmentOptions[\n",
-    "                    str(solutions[dm][\"treatment\"][decision_index][stand])\n",
-    "                ][selectedYear]\n",
-    "            ],\n",
+    "            + description_dict[treatment_id],\n",
+    "            \"value\": treatment_id,\n",
     "        }\n",
     "    )\n",
     "    option[\"series\"][0][\"nameMap\"][stand] = (\n",
-    "        str(stand)\n",
-    "        + \" \"\n",
-    "        + treatmentOptions[\n",
-    "            str(solutions[dm][\"treatment\"][decision_index][stand])\n",
-    "        ][selectedYear]\n",
+    "        \"Stand \" + str(stand)\n",
+    "            + \" \"\n",
+    "            + description_dict[treatment_id]\n",
     "    )\n",
     "\n"
    ]
@@ -507,6 +490,122 @@
     "dm = 1 # This info should come from somewhere\n",
     "with open(f\"utopia/data/{dm}.json\", \"r\") as f:\n",
     "    forestMap = json.load(f)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "{'tooltip': {'trigger': 'item', 'showDelay': 0, 'transitionDuration': 0.2},\n",
+       " 'visualMap': {'left': 'right',\n",
+       "  'showLabel': True,\n",
+       "  'type': 'piecewise',\n",
+       "  'pieces': [{'\"value\": treatmentIDs[\\n                treatmentOptions[\\n                    str(solutions[dm][\"treatment\"][decision_index][stand])\\n                ][selectedYear]\\n            ],value': 0,\n",
+       "    'symbol': 'circle',\n",
+       "    'label': 'Do nothing',\n",
+       "    'color': '#4daf4a'},\n",
+       "   {'\"value\": treatmentIDs[\\n                treatmentOptions[\\n                    str(solutions[dm][\"treatment\"][decision_index][stand])\\n                ][selectedYear]\\n            ],value': 0,\n",
+       "    'symbol': 'circle',\n",
+       "    'label': 'Do nothing',\n",
+       "    'color': '#4daf4a'},\n",
+       "   {'\"value\": treatmentIDs[\\n                treatmentOptions[\\n                    str(solutions[dm][\"treatment\"][decision_index][stand])\\n                ][selectedYear]\\n            ],value': 0,\n",
+       "    'symbol': 'circle',\n",
+       "    'label': 'Do nothing',\n",
+       "    'color': '#4daf4a'},\n",
+       "   {'\"value\": treatmentIDs[\\n                treatmentOptions[\\n                    str(solutions[dm][\"treatment\"][decision_index][stand])\\n                ][selectedYear]\\n            ],value': 1,\n",
+       "    'symbol': 'circle',\n",
+       "    'label': 'Clearcut',\n",
+       "    'color': '#ff7f00'},\n",
+       "   {'\"value\": treatmentIDs[\\n                treatmentOptions[\\n                    str(solutions[dm][\"treatment\"][decision_index][stand])\\n                ][selectedYear]\\n            ],value': 0,\n",
+       "    'symbol': 'circle',\n",
+       "    'label': 'Do nothing',\n",
+       "    'color': '#4daf4a'},\n",
+       "   {'\"value\": treatmentIDs[\\n                treatmentOptions[\\n                    str(solutions[dm][\"treatment\"][decision_index][stand])\\n                ][selectedYear]\\n            ],value': 3,\n",
+       "    'symbol': 'circle',\n",
+       "    'label': 'Thinning from above',\n",
+       "    'color': '#ffff33'},\n",
+       "   {'\"value\": treatmentIDs[\\n                treatmentOptions[\\n                    str(solutions[dm][\"treatment\"][decision_index][stand])\\n                ][selectedYear]\\n            ],value': 0,\n",
+       "    'symbol': 'circle',\n",
+       "    'label': 'Do nothing',\n",
+       "    'color': '#4daf4a'},\n",
+       "   {'\"value\": treatmentIDs[\\n                treatmentOptions[\\n                    str(solutions[dm][\"treatment\"][decision_index][stand])\\n                ][selectedYear]\\n            ],value': 3,\n",
+       "    'symbol': 'circle',\n",
+       "    'label': 'Thinning from above',\n",
+       "    'color': '#ffff33'},\n",
+       "   {'\"value\": treatmentIDs[\\n                treatmentOptions[\\n                    str(solutions[dm][\"treatment\"][decision_index][stand])\\n                ][selectedYear]\\n            ],value': 0,\n",
+       "    'symbol': 'circle',\n",
+       "    'label': 'Do nothing',\n",
+       "    'color': '#4daf4a'},\n",
+       "   {'\"value\": treatmentIDs[\\n                treatmentOptions[\\n                    str(solutions[dm][\"treatment\"][decision_index][stand])\\n                ][selectedYear]\\n            ],value': 0,\n",
+       "    'symbol': 'circle',\n",
+       "    'label': 'Do nothing',\n",
+       "    'color': '#4daf4a'},\n",
+       "   {'\"value\": treatmentIDs[\\n                treatmentOptions[\\n                    str(solutions[dm][\"treatment\"][decision_index][stand])\\n                ][selectedYear]\\n            ],value': 0,\n",
+       "    'symbol': 'circle',\n",
+       "    'label': 'Do nothing',\n",
+       "    'color': '#4daf4a'},\n",
+       "   {'\"value\": treatmentIDs[\\n                treatmentOptions[\\n                    str(solutions[dm][\"treatment\"][decision_index][stand])\\n                ][selectedYear]\\n            ],value': 0,\n",
+       "    'symbol': 'circle',\n",
+       "    'label': 'Do nothing',\n",
+       "    'color': '#4daf4a'},\n",
+       "   {'\"value\": treatmentIDs[\\n                treatmentOptions[\\n                    str(solutions[dm][\"treatment\"][decision_index][stand])\\n                ][selectedYear]\\n            ],value': 0,\n",
+       "    'symbol': 'circle',\n",
+       "    'label': 'Do nothing',\n",
+       "    'color': '#4daf4a'}],\n",
+       "  'text': ['Management plans'],\n",
+       "  'calculable': True},\n",
+       " 'toolbox': {'show': True,\n",
+       "  'left': 'left',\n",
+       "  'top': 'top',\n",
+       "  'feature': {'dataView': {'readOnly': False},\n",
+       "   'restore': {},\n",
+       "   'saveAsImage': {}}},\n",
+       " 'series': [{'name': 'Forest',\n",
+       "   'type': 'map',\n",
+       "   'roam': True,\n",
+       "   'map': 'ForestMap',\n",
+       "   'nameProperty': 'standnumbe',\n",
+       "   'colorBy': 'data',\n",
+       "   'itemStyle': {'symbol': 'triangle', 'color': 'red'},\n",
+       "   'data': [{'name': 'Stand 25.0 Do nothing', 'value': 0},\n",
+       "    {'name': 'Stand 26.0 Do nothing', 'value': 0},\n",
+       "    {'name': 'Stand 42.0 Do nothing', 'value': 0},\n",
+       "    {'name': 'Stand 44.0 Clearcut', 'value': 1},\n",
+       "    {'name': 'Stand 27.0 Do nothing', 'value': 0},\n",
+       "    {'name': 'Stand 28.0 Thinning from above', 'value': 3},\n",
+       "    {'name': 'Stand 29.0 Do nothing', 'value': 0},\n",
+       "    {'name': 'Stand 14.0 Thinning from above', 'value': 3},\n",
+       "    {'name': 'Stand 11.0 Do nothing', 'value': 0},\n",
+       "    {'name': 'Stand 13.0 Do nothing', 'value': 0},\n",
+       "    {'name': 'Stand 12.0 Do nothing', 'value': 0},\n",
+       "    {'name': 'Stand 15.0 Do nothing', 'value': 0},\n",
+       "    {'name': 'Stand 16.0 Do nothing', 'value': 0}],\n",
+       "   'nameMap': {25.0: 'Stand 25.0 Do nothing',\n",
+       "    26.0: 'Stand 26.0 Do nothing',\n",
+       "    42.0: 'Stand 42.0 Do nothing',\n",
+       "    44.0: 'Stand 44.0 Clearcut',\n",
+       "    27.0: 'Stand 27.0 Do nothing',\n",
+       "    28.0: 'Stand 28.0 Thinning from above',\n",
+       "    29.0: 'Stand 29.0 Do nothing',\n",
+       "    14.0: 'Stand 14.0 Thinning from above',\n",
+       "    11.0: 'Stand 11.0 Do nothing',\n",
+       "    13.0: 'Stand 13.0 Do nothing',\n",
+       "    12.0: 'Stand 12.0 Do nothing',\n",
+       "    15.0: 'Stand 15.0 Do nothing',\n",
+       "    16.0: 'Stand 16.0 Do nothing'}}]}"
+      ]
+     },
+     "execution_count": 11,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "option"
    ]
   }
  ],
