Utopia map creation

--- a/testailu.ipynb
+++ b/testailu.ipynb
@@ -277,7 +277,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -494,7 +494,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
@@ -504,55 +504,28 @@
        " 'visualMap': {'left': 'right',\n",
        "  'showLabel': True,\n",
        "  'type': 'piecewise',\n",
-       "  'pieces': [{'\"value\": treatmentIDs[\\n                treatmentOptions[\\n                    str(solutions[dm][\"treatment\"][decision_index][stand])\\n                ][selectedYear]\\n            ],value': 0,\n",
+       "  'pieces': [{'value': 0,\n",
        "    'symbol': 'circle',\n",
        "    'label': 'Do nothing',\n",
        "    'color': '#4daf4a'},\n",
-       "   {'\"value\": treatmentIDs[\\n                treatmentOptions[\\n                    str(solutions[dm][\"treatment\"][decision_index][stand])\\n                ][selectedYear]\\n            ],value': 0,\n",
-       "    'symbol': 'circle',\n",
-       "    'label': 'Do nothing',\n",
-       "    'color': '#4daf4a'},\n",
-       "   {'\"value\": treatmentIDs[\\n                treatmentOptions[\\n                    str(solutions[dm][\"treatment\"][decision_index][stand])\\n                ][selectedYear]\\n            ],value': 0,\n",
-       "    'symbol': 'circle',\n",
-       "    'label': 'Do nothing',\n",
-       "    'color': '#4daf4a'},\n",
-       "   {'\"value\": treatmentIDs[\\n                treatmentOptions[\\n                    str(solutions[dm][\"treatment\"][decision_index][stand])\\n                ][selectedYear]\\n            ],value': 1,\n",
-       "    'symbol': 'circle',\n",
-       "    'label': 'Clearcut',\n",
-       "    'color': '#ff7f00'},\n",
-       "   {'\"value\": treatmentIDs[\\n                treatmentOptions[\\n                    str(solutions[dm][\"treatment\"][decision_index][stand])\\n                ][selectedYear]\\n            ],value': 0,\n",
-       "    'symbol': 'circle',\n",
-       "    'label': 'Do nothing',\n",
-       "    'color': '#4daf4a'},\n",
-       "   {'\"value\": treatmentIDs[\\n                treatmentOptions[\\n                    str(solutions[dm][\"treatment\"][decision_index][stand])\\n                ][selectedYear]\\n            ],value': 3,\n",
+       "   {'value': 0, 'symbol': 'circle', 'label': 'Do nothing', 'color': '#4daf4a'},\n",
+       "   {'value': 0, 'symbol': 'circle', 'label': 'Do nothing', 'color': '#4daf4a'},\n",
+       "   {'value': 1, 'symbol': 'circle', 'label': 'Clearcut', 'color': '#ff7f00'},\n",
+       "   {'value': 0, 'symbol': 'circle', 'label': 'Do nothing', 'color': '#4daf4a'},\n",
+       "   {'value': 3,\n",
        "    'symbol': 'circle',\n",
        "    'label': 'Thinning from above',\n",
        "    'color': '#ffff33'},\n",
-       "   {'\"value\": treatmentIDs[\\n                treatmentOptions[\\n                    str(solutions[dm][\"treatment\"][decision_index][stand])\\n                ][selectedYear]\\n            ],value': 0,\n",
-       "    'symbol': 'circle',\n",
-       "    'label': 'Do nothing',\n",
-       "    'color': '#4daf4a'},\n",
-       "   {'\"value\": treatmentIDs[\\n                treatmentOptions[\\n                    str(solutions[dm][\"treatment\"][decision_index][stand])\\n                ][selectedYear]\\n            ],value': 3,\n",
+       "   {'value': 0, 'symbol': 'circle', 'label': 'Do nothing', 'color': '#4daf4a'},\n",
+       "   {'value': 3,\n",
        "    'symbol': 'circle',\n",
        "    'label': 'Thinning from above',\n",
        "    'color': '#ffff33'},\n",
-       "   {'\"value\": treatmentIDs[\\n                treatmentOptions[\\n                    str(solutions[dm][\"treatment\"][decision_index][stand])\\n                ][selectedYear]\\n            ],value': 0,\n",
-       "    'symbol': 'circle',\n",
-       "    'label': 'Do nothing',\n",
-       "    'color': '#4daf4a'},\n",
-       "   {'\"value\": treatmentIDs[\\n                treatmentOptions[\\n                    str(solutions[dm][\"treatment\"][decision_index][stand])\\n                ][selectedYear]\\n            ],value': 0,\n",
-       "    'symbol': 'circle',\n",
-       "    'label': 'Do nothing',\n",
-       "    'color': '#4daf4a'},\n",
-       "   {'\"value\": treatmentIDs[\\n                treatmentOptions[\\n                    str(solutions[dm][\"treatment\"][decision_index][stand])\\n                ][selectedYear]\\n            ],value': 0,\n",
-       "    'symbol': 'circle',\n",
-       "    'label': 'Do nothing',\n",
-       "    'color': '#4daf4a'},\n",
-       "   {'\"value\": treatmentIDs[\\n                treatmentOptions[\\n                    str(solutions[dm][\"treatment\"][decision_index][stand])\\n                ][selectedYear]\\n            ],value': 0,\n",
-       "    'symbol': 'circle',\n",
-       "    'label': 'Do nothing',\n",
-       "    'color': '#4daf4a'},\n",
-       "   {'\"value\": treatmentIDs[\\n                treatmentOptions[\\n                    str(solutions[dm][\"treatment\"][decision_index][stand])\\n                ][selectedYear]\\n            ],value': 0,\n",
+       "   {'value': 0, 'symbol': 'circle', 'label': 'Do nothing', 'color': '#4daf4a'},\n",
+       "   {'value': 0, 'symbol': 'circle', 'label': 'Do nothing', 'color': '#4daf4a'},\n",
+       "   {'value': 0, 'symbol': 'circle', 'label': 'Do nothing', 'color': '#4daf4a'},\n",
+       "   {'value': 0, 'symbol': 'circle', 'label': 'Do nothing', 'color': '#4daf4a'},\n",
+       "   {'value': 0,\n",
        "    'symbol': 'circle',\n",
        "    'label': 'Do nothing',\n",
        "    'color': '#4daf4a'}],\n",
@@ -599,7 +572,7 @@
        "    16.0: 'Stand 16.0 Do nothing'}}]}"
       ]
      },
-     "execution_count": 11,
+     "execution_count": 13,
      "metadata": {},
      "output_type": "execute_result"
     }
