--- a/testailu.ipynb
+++ b/testailu.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -12,7 +12,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -27,14 +27,14 @@
    ],
    "source": [
     "\n",
-    "from utopia.utopia_problem import utopia_problem\n",
+    "from desdeo.utopia_stuff.utopia_problem import utopia_problem\n",
     "from desdeo.mcdm.nimbus import generate_starting_point\n",
     "from desdeo.tools.utils import available_solvers"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -67,7 +67,7 @@
       "Found heuristic solution: objective 0.9999961\n",
       "Variable types: 1 continuous, 30 integer (30 binary)\n",
       "\n",
-      "Root relaxation: objective 4.915216e-01, 17 iterations, 0.00 seconds (0.00 work units)\n",
+      "Root relaxation: objective 4.915216e-01, 17 iterations, 0.01 seconds (0.00 work units)\n",
       "Another try with MIP start\n",
       "\n",
       "    Nodes    |    Current Node    |     Objective Bounds      |     Work\n",
@@ -93,7 +93,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -114,7 +114,7 @@
        " TensorVariable(name='X_13', symbol='X_13', variable_type=<VariableTypeEnum.binary: 'binary'>, shape=[13], lowerbounds=['List', 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0], upperbounds=['List', 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1], initial_values=['List', 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0])]"
       ]
      },
-     "execution_count": 4,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -125,7 +125,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -134,7 +134,7 @@
        "SolverResults(optimal_variables={'X_1': [1.0, 0.0, 0.0, 0.0, 0.0, 0.0, 0.0, 0.0, 0.0, 0.0, 0.0, 0.0, 0.0], 'X_2': [1.0, 0.0, 0.0, 0.0, 0.0, 0.0, 0.0, 0.0, 0.0, 0.0, 0.0, 0.0, 0.0], 'X_3': [1.0, 0.0, 0.0, 0.0, 0.0, 0.0, 0.0, 0.0, 0.0, 0.0, 0.0, 0.0, 0.0], 'X_4': [-0.0, -0.0, -0.0, -0.0, 1.0, -0.0, 0.0, -0.0, 0.0, -0.0, 0.0, -0.0, -0.0], 'X_5': [1.0, -0.0, -0.0, -0.0, 0.0, 0.0, 0.0, 0.0, 0.0, 0.0, 0.0, 0.0, 0.0], 'X_6': [-0.0, -0.0, 1.0, -0.0, -0.0, -0.0, 0.0, -0.0, 0.0, -0.0, 0.0, -0.0, 0.0], 'X_7': [1.0, 0.0, 0.0, 0.0, 0.0, 0.0, 0.0, 0.0, 0.0, 0.0, 0.0, 0.0, 0.0], 'X_8': [-0.0, -0.0, 1.0, -0.0, 0.0, 0.0, 0.0, 0.0, 0.0, 0.0, 0.0, 0.0, 0.0], 'X_9': [1.0, 0.0, 0.0, 0.0, 0.0, 0.0, 0.0, 0.0, 0.0, 0.0, 0.0, 0.0, 0.0], 'X_10': [1.0, 0.0, 0.0, 0.0, 0.0, 0.0, 0.0, 0.0, 0.0, 0.0, 0.0, 0.0, 0.0], 'X_11': [1.0, -0.0, -0.0, 0.0, 0.0, 0.0, 0.0, 0.0, 0.0, 0.0, 0.0, 0.0, 0.0], 'X_12': [1.0, 0.0, 0.0, 0.0, 0.0, 0.0, 0.0, 0.0, 0.0, 0.0, 0.0, 0.0, 0.0], 'X_13': [1.0, 0.0, 0.0, 0.0, 0.0, 0.0, 0.0, 0.0, 0.0, 0.0, 0.0, 0.0, 0.0], '_alpha': 0.49209727681124427}, optimal_objectives={'f_1': 37832.80781517742, 'f_2': 1931.5977018158155, 'f_3': 18680.98264500715}, constraint_values={'x_con_1': -0.0, 'x_con_2': -0.0, 'x_con_3': -0.0, 'x_con_4': -0.0, 'x_con_5': -0.0, 'x_con_6': -0.0, 'x_con_7': -0.0, 'x_con_8': -0.0, 'x_con_9': -0.0, 'x_con_10': -0.0, 'x_con_11': -0.0, 'x_con_12': -0.0, 'x_con_13': -0.0, 'f_1_con': -0.001141524068145383, 'f_2_con': -0.3311318481419864, 'f_3_con': 4.141131881851834e-14}, success=True, message=\"Gurobipy solver status is: 'Optimal solution found.'\")"
       ]
      },
-     "execution_count": 5,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -145,7 +145,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
@@ -191,7 +191,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
@@ -245,7 +245,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
@@ -266,7 +266,7 @@
        " 'X_13': {'2025': 0, '2030': 0, '2035': 0}}"
       ]
      },
-     "execution_count": 8,
+     "execution_count": 11,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -482,103 +482,112 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [],
    "source": [
     "\n",
-    "dm = 1 # This info should come from somewhere\n",
-    "with open(f\"utopia/data/{dm}.json\", \"r\") as f:\n",
-    "    forestMap = json.load(f)"
+    "with open(\"desdeo/utopia_stuff/data/1.json\") as f:  # noqa: PTH123\n",
+    "    forest_map = f.read()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 17,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "foo=json.loads(json.dumps(schedule_dict))\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 18,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "{'tooltip': {'trigger': 'item', 'showDelay': 0, 'transitionDuration': 0.2},\n",
-       " 'visualMap': {'left': 'right',\n",
-       "  'showLabel': True,\n",
-       "  'type': 'piecewise',\n",
-       "  'pieces': [{'value': 0,\n",
-       "    'symbol': 'circle',\n",
-       "    'label': 'Do nothing',\n",
-       "    'color': '#4daf4a'},\n",
-       "   {'value': 0, 'symbol': 'circle', 'label': 'Do nothing', 'color': '#4daf4a'},\n",
-       "   {'value': 0, 'symbol': 'circle', 'label': 'Do nothing', 'color': '#4daf4a'},\n",
-       "   {'value': 1, 'symbol': 'circle', 'label': 'Clearcut', 'color': '#ff7f00'},\n",
-       "   {'value': 0, 'symbol': 'circle', 'label': 'Do nothing', 'color': '#4daf4a'},\n",
-       "   {'value': 3,\n",
-       "    'symbol': 'circle',\n",
-       "    'label': 'Thinning from above',\n",
-       "    'color': '#ffff33'},\n",
-       "   {'value': 0, 'symbol': 'circle', 'label': 'Do nothing', 'color': '#4daf4a'},\n",
-       "   {'value': 3,\n",
-       "    'symbol': 'circle',\n",
-       "    'label': 'Thinning from above',\n",
-       "    'color': '#ffff33'},\n",
-       "   {'value': 0, 'symbol': 'circle', 'label': 'Do nothing', 'color': '#4daf4a'},\n",
-       "   {'value': 0, 'symbol': 'circle', 'label': 'Do nothing', 'color': '#4daf4a'},\n",
-       "   {'value': 0, 'symbol': 'circle', 'label': 'Do nothing', 'color': '#4daf4a'},\n",
-       "   {'value': 0, 'symbol': 'circle', 'label': 'Do nothing', 'color': '#4daf4a'},\n",
-       "   {'value': 0,\n",
-       "    'symbol': 'circle',\n",
-       "    'label': 'Do nothing',\n",
-       "    'color': '#4daf4a'}],\n",
-       "  'text': ['Management plans'],\n",
-       "  'calculable': True},\n",
-       " 'toolbox': {'show': True,\n",
-       "  'left': 'left',\n",
-       "  'top': 'top',\n",
-       "  'feature': {'dataView': {'readOnly': False},\n",
-       "   'restore': {},\n",
-       "   'saveAsImage': {}}},\n",
-       " 'series': [{'name': 'Forest',\n",
-       "   'type': 'map',\n",
-       "   'roam': True,\n",
-       "   'map': 'ForestMap',\n",
-       "   'nameProperty': 'standnumbe',\n",
-       "   'colorBy': 'data',\n",
-       "   'itemStyle': {'symbol': 'triangle', 'color': 'red'},\n",
-       "   'data': [{'name': 'Stand 25.0 Do nothing', 'value': 0},\n",
-       "    {'name': 'Stand 26.0 Do nothing', 'value': 0},\n",
-       "    {'name': 'Stand 42.0 Do nothing', 'value': 0},\n",
-       "    {'name': 'Stand 44.0 Clearcut', 'value': 1},\n",
-       "    {'name': 'Stand 27.0 Do nothing', 'value': 0},\n",
-       "    {'name': 'Stand 28.0 Thinning from above', 'value': 3},\n",
-       "    {'name': 'Stand 29.0 Do nothing', 'value': 0},\n",
-       "    {'name': 'Stand 14.0 Thinning from above', 'value': 3},\n",
-       "    {'name': 'Stand 11.0 Do nothing', 'value': 0},\n",
-       "    {'name': 'Stand 13.0 Do nothing', 'value': 0},\n",
-       "    {'name': 'Stand 12.0 Do nothing', 'value': 0},\n",
-       "    {'name': 'Stand 15.0 Do nothing', 'value': 0},\n",
-       "    {'name': 'Stand 16.0 Do nothing', 'value': 0}],\n",
-       "   'nameMap': {25.0: 'Stand 25.0 Do nothing',\n",
-       "    26.0: 'Stand 26.0 Do nothing',\n",
-       "    42.0: 'Stand 42.0 Do nothing',\n",
-       "    44.0: 'Stand 44.0 Clearcut',\n",
-       "    27.0: 'Stand 27.0 Do nothing',\n",
-       "    28.0: 'Stand 28.0 Thinning from above',\n",
-       "    29.0: 'Stand 29.0 Do nothing',\n",
-       "    14.0: 'Stand 14.0 Thinning from above',\n",
-       "    11.0: 'Stand 11.0 Do nothing',\n",
-       "    13.0: 'Stand 13.0 Do nothing',\n",
-       "    12.0: 'Stand 12.0 Do nothing',\n",
-       "    15.0: 'Stand 15.0 Do nothing',\n",
-       "    16.0: 'Stand 16.0 Do nothing'}}]}"
+       "{'X_1': {'0': 'donothing', 'unit': 25.0},\n",
+       " 'X_2': {'0': 'donothing', 'unit': 26.0},\n",
+       " 'X_3': {'0': 'donothing', 'unit': 42.0},\n",
+       " 'X_4': {'0': 'donothing',\n",
+       "  '1': 'below_2035',\n",
+       "  '2': 'above_2035',\n",
+       "  '3': 'even_2035',\n",
+       "  '4': 'clearcut_2035',\n",
+       "  '5': 'below_2030',\n",
+       "  '6': 'below_2030 + clearcut_2035',\n",
+       "  '7': 'above_2030',\n",
+       "  '8': 'above_2030 + clearcut_2035',\n",
+       "  '9': 'even_2030',\n",
+       "  '10': 'even_2030 + clearcut_2035',\n",
+       "  '11': 'clearcut_2030',\n",
+       "  '12': 'clearcut_2025',\n",
+       "  'unit': 44.0},\n",
+       " 'X_5': {'0': 'donothing',\n",
+       "  '1': 'below_2035',\n",
+       "  '2': 'above_2035',\n",
+       "  '3': 'even_2035',\n",
+       "  'unit': 27.0},\n",
+       " 'X_6': {'0': 'donothing',\n",
+       "  '1': 'below_2035',\n",
+       "  '2': 'above_2035',\n",
+       "  '3': 'even_2035',\n",
+       "  '4': 'clearcut_2035',\n",
+       "  '5': 'below_2030',\n",
+       "  '6': 'below_2030 + clearcut_2035',\n",
+       "  '7': 'above_2030',\n",
+       "  '8': 'above_2030 + clearcut_2035',\n",
+       "  '9': 'even_2030',\n",
+       "  '10': 'even_2030 + clearcut_2035',\n",
+       "  '11': 'clearcut_2030',\n",
+       "  'unit': 28.0},\n",
+       " 'X_7': {'0': 'donothing', 'unit': 29.0},\n",
+       " 'X_8': {'0': 'donothing',\n",
+       "  '1': 'below_2035',\n",
+       "  '2': 'above_2035',\n",
+       "  '3': 'even_2035',\n",
+       "  'unit': 14.0},\n",
+       " 'X_9': {'0': 'donothing', 'unit': 11.0},\n",
+       " 'X_10': {'0': 'donothing', 'unit': 13.0},\n",
+       " 'X_11': {'0': 'donothing',\n",
+       "  '1': 'below_2035',\n",
+       "  '2': 'above_2035',\n",
+       "  '3': 'even_2035',\n",
+       "  'unit': 12.0},\n",
+       " 'X_12': {'0': 'donothing', 'unit': 15.0},\n",
+       " 'X_13': {'0': 'donothing', 'unit': 16.0}}"
       ]
      },
-     "execution_count": 13,
+     "execution_count": 18,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "option"
+    "foo"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 21,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'donothing'"
+      ]
+     },
+     "execution_count": 21,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "foo['X_1'][str(0)]"
    ]
   }
  ],
